// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimDetails component matches the snapshot on render 1`] = `
<ScrollViewMock
  style={
    Object {
      "backgroundColor": "rgb(245, 245, 245)",
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(5, 5, 13)",
        "fontFamily": "TT Commons",
        "fontSize": 30,
        "marginTop": 32,
        "textAlign": "center",
      }
    }
  >
    Email
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 24,
      }
    }
  >
    <TextInputField
      fieldName="email"
      fieldValue="test@test.com"
      handleFieldInput={[Function]}
      key="email"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginVertical": 48,
      }
    }
  >
    <ThemedComponent
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "container": Object {
            "backgroundColor": "rgb(148, 47, 81)",
            "borderRadius": 4,
            "height": 48,
            "minWidth": 164,
          },
          "text": Object {
            "color": "white",
            "fontFamily": "TT Commons",
            "fontSize": 22,
            "fontWeight": "normal",
            "paddingVertical": 16,
          },
        }
      }
      text="Add claim"
      upperCase={false}
    />
  </View>
</ScrollViewMock>
`;

exports[`ClaimDetails component matches the snapshot on render with multi-line claim 1`] = `
<ScrollViewMock
  style={
    Object {
      "backgroundColor": "rgb(245, 245, 245)",
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(5, 5, 13)",
        "fontFamily": "TT Commons",
        "fontSize": 30,
        "marginTop": 32,
        "textAlign": "center",
      }
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 24,
      }
    }
  >
    <TextInputField
      fieldName="givenName"
      fieldValue="natascha"
      handleFieldInput={[Function]}
      key="givenName"
    />
    <TextInputField
      fieldName="familyName"
      fieldValue="test"
      handleFieldInput={[Function]}
      key="familyName"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginVertical": 48,
      }
    }
  >
    <ThemedComponent
      disabled={false}
      onPress={[Function]}
      style={
        Object {
          "container": Object {
            "backgroundColor": "rgb(148, 47, 81)",
            "borderRadius": 4,
            "height": 48,
            "minWidth": 164,
          },
          "text": Object {
            "color": "white",
            "fontFamily": "TT Commons",
            "fontSize": 22,
            "fontWeight": "normal",
            "paddingVertical": 16,
          },
        }
      }
      text="Add claim"
      upperCase={false}
    />
  </View>
</ScrollViewMock>
`;
